cib/infra-fe/cib-prod-kdc/mf-cib-business-bills/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  labels:
    provider: ngkube
    group: cib-portal
  name: kdc-mf-cib-business-bills
  annotations:
    haproxy.router.openshift.io/rewrite-target: /
    haproxy.router.openshift.io/timeout: 120s

spec:
  host: corporate.alinma.com
  path: "/cib-business-bills-ui"
  to:
    kind: Service
    name: mf-cib-business-bills
  port:
    targetPort: 8080
  tls:
    termination: edge
    certificate: |-
      -----BEGIN CERTIFICATE-----
      MIIGyzCCBbOgAwIBAgIQA4HqVTLKISX15XIw9Wd0fjANBgkqhkiG9w0BAQsFADBZ
[...]
      bZAQqTizBULdHZ1zjAMc
      -----END CERTIFICATE-----
    key: |-
      -----BEGIN PRIVATE KEY-----
      MIIEvQIBADANBgkqhkiG9w0BAQEFAASCBKcwggSjAgEAAoIBAQCwUTSAOenbTPLd
[...]
      sb+s0odMvy5E+cCD0GX3M3Q=
      -----END PRIVATE KEY-----	  
    caCertificate: |-
      -----BEGIN CERTIFICATE-----
      MIIEyDCCA7CgAwIBAgIQDPW9BitWAvR6uFAsI8zwZjANBgkqhkiG9w0BAQsFADBh
[...]
      JCqVJUzKoZHm1Lesh3Sz8W2jmdv51b2EQJ8HmA==
      -----END CERTIFICATE-----
  wildcardPolicy: None
